Consolidation into correct project