@@ -1,10 +1,10 @@
-<project basedir="../" default="all" name="fileMapping">
+<project basedir="../" default="all" name="FileMapper">
 
 	
-	<property name="Project" value="fileMapping" />
-
+	<property name="Project" value="FileMapper" />
+	<property name="XMLFiles" value="fileMapperXML" />
 	<!-- ========== Executable Targets ======================================== -->
-	<property name="Name" value="fileMapping" />
+	<property name="Name" value="PluginTest" />
 	<import file="../../edu.harvard.i2b2.common/common_build.xml" />
 	<property name="gensrc"     value="gensrc"/>
 
@@ -21,7 +21,46 @@
 		</taskdef>
 
 	</target>
+	
+	<!-- =================================================================== -->
+		<!-- 							 GENERATION 				 -->
+		<!-- =================================================================== -->
+		<!--
+		../${i2b2xmlproject}/xsd/cell/ont_1.1/ONT_QRY.xsd 
+				     	../${i2b2xmlproject}/xsd/cell/crc/psm_1.1/CRC_PSM_QRY.xsd 
+				     	../${i2b2xmlproject}/xsd/cell/crc/pdo_1.1/CRC_PDO_QRY.xsd 
+				     	../${i2b2xmlproject}/xsd/hive/pdo_1.1/i2b2_PDO.xsd 
+				     	../${i2b2xmlproject}/xsd/cell/crc/psm_1.1/CRC_PSM_QRY_query_definition.xsd 
+				     	../${i2b2xmlproject}/xsd/hive/plugin/drag_drop.xsd 
+				     	b
+				     	${XMLFiles}/1.1/i2b2_pdo_bindings.xjb 
+				     	${XMLFiles}/1.1/i2b2_vdo_bindings.xjb 
+				     	${XMLFiles}/1.1/crc_psm_qry.xjb 
+				     	${XMLFiles}/1.1/i2b2_qry_result.xjb 
+				     	${XMLFiles}/bindings/crc_pdo_qry.xjb 
+				     	${XMLFiles}/bindings/crc_psm_qry_def.xjb 
+				     	${XMLFiles}/1.1/crc_psm_qry_analysis_definition.xjb
+				     	${XMLFiles}/1.1/dragNdrop_bindings.xjb
+				     	
+				     	
+				     	-b ${XMLFiles}/bindings/fileMapper_DataTypes_bindings.xjb 
+				     	${XMLFiles}/bindings/i2b2_response_message_bindings.xjb 
+				     	${XMLFiles}/bindings/i2b2_request_message_bindings.xjb
+				     	
+				     -->
+	<target name="jaxb_gen" depends="gensrcInit">
+				 <java dir="." jar="../edu.harvard.i2b2.common/lib/jaxb/jaxb-xjc.jar" fork="true" failonerror="true" >
+				     <arg line="-quiet -nv -extension ${XMLFiles}/xsd/fileMapper_DataTypes.xsd 
+				     	../${i2b2xmlproject}/xsd/hive/msg_1.1/i2b2_response.xsd  
+				      	-b ${XMLFiles}/bindings/fileMapper_DataTypes_bindings.xjb 
+				     	${XMLFiles}/bindings/i2b2_response_message_bindings.xjb 
 
+				     -d ${gensrc}"/>
+				    
+				 	<jvmarg value="-Djava.endorsed.dirs=../edu.harvard.i2b2.common/lib/jaxb" />
+				     <classpath refid="classpath"/>
+				</java>
+		</target>
 
 
 	<!-- =================================================================== -->
@@ -30,8 +69,8 @@
 	<target name="clean"  description="Clean all build products" >
     	<delete dir="${dist}"/> 
     	<delete dir="${gensrc}"/>   
-        <delete dir="${genlib}"/> 
-    	<mkdir dir="${genlib}"/>
+    <!--	<delete dir="${genlib}"/> 
+    	<mkdir dir="${genlib}"/>-->
     	<mkdir dir="${dist}"/>
     	<mkdir dir="${gensrc}"/>
 	</target>
@@ -39,19 +78,20 @@
 	<!-- =================================================================== -->
 	<!-- 								COMMON JAXB GENERATION 				 -->
 	<!-- =================================================================== -->
-	<target name="jaxb_gen" depends="gensrcInit">
-			 <java dir="." jar="../edu.harvard.i2b2.common/lib/jaxb/jaxb-xjc.jar" fork="true" failonerror="true" >
-			     <arg line="-quiet -nv -extension ./XML/xsd/requiredFields.xsd ../${i2b2xmlproject}/xsd/hive/msg_1.1/i2b2_response.xsd ../${i2b2xmlproject}/xsd/cell/crc/psm_1.1/CRC_PSM_QRY.xsd
-			     	-b ./XML/xsd/requiredFields.xjb ./XML/xsd/crc_psm_qry.xjb ./XML/xsd/i2b2_response_message_bindings.xjb -d ${gensrc}"/>
+	<!--<target name="jaxb_gen" depends="gensrcInit">
+		 <java dir="." jar="../edu.harvard.i2b2.common/lib/jaxb/jaxb-xjc.jar" fork="true" failonerror="true" >
+			     <arg line="-quiet -nv -extension ../JAXBTest/schema/TestClass01.xsd
+			     	 -d ${gensrc}"/>
 			     <jvmarg value="-Djava.endorsed.dirs=../edu.harvard.i2b2.common/lib/jaxb" />
 			     <classpath refid="classpath"/>
 			</java>
-		</target>	
-		<!--<xjc destdir="${gensrc}">
-			<schema dir="./XML/xsd/" includes="**/*.xsd"/>
+			-->
+	<!--	<xjc destdir="${gensrc}">
+			<schema dir="../JAXBTest/schema" includes="**/*.xsd"/>
 			</xjc>
--->
 	
+	</target>
+	-->
 	<!-- =================================================================== -->
 	<!-- 								ALL 								 -->
 	<!-- =================================================================== -->
